# Aiambler

./: .gitignore  Makefile  README.md  pyproject.toml
aiambler/: README.md  __init__.py  ast.py  cli.py  compiler.py  errors.py  parser.py  python_runtime.py  runtime.py
benchmarks/: agent_tasks.py  compact_text.ai  fp.ai  fp_std.py  golden_tasks.py  math_std.py  mm.ai  mm_numpy.py  mm_std.py  multistep_tasks.py  ollama_eval.py  run.py  syntax_tokens.py  text.ai  text.py  token_count.py
docs/: DIMENSIONS.md  GOLDEN_TASKS.md  OPERATORS.md  PHILOSOPHY.md  PRIMITIVES.md  ROADMAP.md  TOKEN_MIN.md
examples/: compact.ai  math.ai  numbers.txt  script.ai  text.ai
native/: aiambler.c
tests/: native_smoke.sh  test_aiambler.py
