[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiambler"
version = "0.1.0"
description = "Compact executable intent language for AI agents"
readme = "aiambler/README.md"
requires-python = ">=3.11"
authors = [{ name = "Aiambler contributors" }]
dependencies = []

[project.scripts]
aiambler = "aiambler.cli:main"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]

